@@ -10,15 +10,7 @@
 
 package com.yugabyte.yw.commissioner;
 
-import static com.yugabyte.yw.commissioner.HealthCheckMetrics.CLOCK_SYNC_CHECK;
-import static com.yugabyte.yw.commissioner.HealthCheckMetrics.CUSTOM_NODE_METRICS_COLLECTION_METRIC;
-import static com.yugabyte.yw.commissioner.HealthCheckMetrics.HEALTH_CHECK_METRICS;
-import static com.yugabyte.yw.commissioner.HealthCheckMetrics.HEALTH_CHECK_METRICS_WITHOUT_STATUS;
-import static com.yugabyte.yw.commissioner.HealthCheckMetrics.NODE_EXPORTER_CHECK;
-import static com.yugabyte.yw.commissioner.HealthCheckMetrics.OPENED_FILE_DESCRIPTORS_CHECK;
-import static com.yugabyte.yw.commissioner.HealthCheckMetrics.UPTIME_CHECK;
-import static com.yugabyte.yw.commissioner.HealthCheckMetrics.getCountMetricByCheckName;
-import static com.yugabyte.yw.commissioner.HealthCheckMetrics.getNodeMetrics;
+import static com.yugabyte.yw.commissioner.HealthCheckMetrics.*;
 import static com.yugabyte.yw.common.metrics.MetricService.STATUS_OK;
 import static com.yugabyte.yw.common.metrics.MetricService.buildMetricTemplate;
 import static play.mvc.Http.Status.BAD_REQUEST;
@@ -26,6 +18,7 @@ import static play.mvc.Http.Status.BAD_REQUEST;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.google.common.annotations.VisibleForTesting;
+import com.google.common.collect.Sets;
 import com.google.common.util.concurrent.ThreadFactoryBuilder;
 import com.google.inject.Inject;
 import com.google.inject.Singleton;
@@ -33,21 +26,17 @@ import com.typesafe.config.Config;
 import com.yugabyte.yw.commissioner.Common.CloudType;
 import com.yugabyte.yw.commissioner.tasks.KubernetesTaskBase;
 import com.yugabyte.yw.commissioner.tasks.UniverseTaskBase;
-import com.yugabyte.yw.common.EmailHelper;
-import com.yugabyte.yw.common.FileHelperService;
-import com.yugabyte.yw.common.NodeUniverseManager;
-import com.yugabyte.yw.common.PlatformExecutorFactory;
-import com.yugabyte.yw.common.PlatformScheduler;
-import com.yugabyte.yw.common.PlatformServiceException;
-import com.yugabyte.yw.common.ShellProcessContext;
-import com.yugabyte.yw.common.ShellResponse;
+import com.yugabyte.yw.commissioner.tasks.subtasks.CheckClusterConsistency;
+import com.yugabyte.yw.common.*;
 import com.yugabyte.yw.common.alerts.MaintenanceService;
 import com.yugabyte.yw.common.alerts.SmtpData;
+import com.yugabyte.yw.common.config.GlobalConfKeys;
 import com.yugabyte.yw.common.config.RuntimeConfGetter;
 import com.yugabyte.yw.common.config.RuntimeConfigFactory;
 import com.yugabyte.yw.common.config.UniverseConfKeys;
 import com.yugabyte.yw.common.gflags.GFlagsUtil;
 import com.yugabyte.yw.common.metrics.MetricService;
+import com.yugabyte.yw.common.services.YBClientService;
 import com.yugabyte.yw.common.utils.Pair;
 import com.yugabyte.yw.forms.AlertingData;
 import com.yugabyte.yw.forms.UniverseDefinitionTaskParams;
@@ -78,6 +67,8 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.Duration;
+import java.time.Instant;
+import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
@@ -127,6 +118,9 @@ public class HealthChecker {
   private static final String MAX_NUM_THREADS_NODE_CHECK_KEY =
       "yb.health.max_num_parallel_node_checks";
 
+  private static final String DDL_ATOMICITY_CHECK_RELEASE = "2.18.4.0-b23";
+  private static final String DDL_ATOMICITY_CHECK_PREVIEW_RELEASE = "2.19.1.0-b301";
+
   private final Environment environment;
 
   private final Config config;
@@ -159,6 +153,7 @@ public class HealthChecker {
 
   // We upload health check script to the node only when NodeInfo is updates
   private final Map<Pair<UUID, String>, NodeInfo> uploadedNodeInfo = new ConcurrentHashMap<>();
+  private final Map<UUID, Instant> ddlAtomicitySuccessfulCheckTimestamp = new ConcurrentHashMap<>();
 
   private final Set<String> healthScriptMetrics =
       Collections.newSetFromMap(new ConcurrentHashMap<>());
@@ -170,6 +165,8 @@ public class HealthChecker {
   private final FileHelperService fileHelperService;
 
   private final MaintenanceService maintenanceService;
+
+  private final ClusterConsistencyChecker clusterConsistencyChecker;
 
   @Inject
   public HealthChecker(
@@ -185,7 +182,8 @@ public class HealthChecker {
       ApplicationLifecycle lifecycle,
       NodeUniverseManager nodeUniverseManager,
       FileHelperService fileHelperService,
-      MaintenanceService maintenanceService) {
+      MaintenanceService maintenanceService,
+      YBClientService ybClientService) {
     this(
         environment,
         config,
@@ -199,8 +197,10 @@ public class HealthChecker {
         nodeUniverseManager,
         createUniverseExecutor(platformExecutorFactory, runtimeConfigFactory.globalRuntimeConf()),
         createNodeExecutor(platformExecutorFactory, runtimeConfigFactory.globalRuntimeConf()),
+        createConsistencyCheckExecutor(platformExecutorFactory, confGetter),
         fileHelperService,
-        maintenanceService);
+        maintenanceService,
+        ybClientService);
   }
 
   HealthChecker(
@@ -216,8 +216,10 @@ public class HealthChecker {
       NodeUniverseManager nodeUniverseManager,
       ExecutorService universeExecutor,
       ExecutorService nodeExecutor,
+      ExecutorService consistencyCheckExecutor,
       FileHelperService fileHelperService,
-      MaintenanceService maintenanceService) {
+      MaintenanceService maintenanceService,
+      YBClientService ybClientService) {
     this.environment = environment;
     this.config = config;
     this.platformScheduler = platformScheduler;
@@ -232,6 +234,8 @@ public class HealthChecker {
     this.nodeUniverseManager = nodeUniverseManager;
     this.fileHelperService = fileHelperService;
     this.maintenanceService = maintenanceService;
+    this.clusterConsistencyChecker =
+        new ClusterConsistencyChecker(consistencyCheckExecutor, confGetter, ybClientService);
   }
 
   public void initialize() {
@@ -241,27 +245,29 @@ public class HealthChecker {
         Duration.ZERO /* initialDelay */,
         Duration.ofMillis(healthCheckIntervalMs()) /* interval */,
         this::scheduleRunner);
+    platformScheduler.schedule(
+        clusterConsistencyChecker.getClass().getSimpleName(),
+        Duration.ZERO /* initialDelay */,
+        Duration.ofMillis(healthCheckIntervalMs()) /* interval */,
+        clusterConsistencyChecker::processAll);
   }
 
   // The interval at which the checker will run.
   // Can be overridden per customer.
   private long healthCheckIntervalMs() {
-    Long interval = config.getLong("yb.health.check_interval_ms");
-    return interval == null ? 0 : interval;
+    return config.getLong("yb.health.check_interval_ms");
   }
 
   // The interval at which check result will be stored to DB
   // Can be overridden per customer.
   private long healthCheckStoreIntervalMs() {
-    Long interval = config.getLong("yb.health.store_interval_ms");
-    return interval == null ? 0 : interval;
+    return config.getLong("yb.health.store_interval_ms");
   }
 
   // The interval at which to send a status update of all the current universes.
   // Can be overridden per customer.
   private long statusUpdateIntervalMs() {
-    Long interval = config.getLong("yb.health.status_interval_ms");
-    return interval == null ? 0 : interval;
+    return config.getLong("yb.health.status_interval_ms");
   }
 
   /**
@@ -331,7 +337,13 @@ public class HealthChecker {
         }
         if (shouldCollectNodeMetrics
             || checkName.equals(OPENED_FILE_DESCRIPTORS_CHECK)
-            || checkName.equals(CLOCK_SYNC_CHECK)) {
+            || checkName.equals(UNEXPECTED_PROCESSES_CHECK)
+            || checkName.equals(CLOCK_SYNC_CHECK)
+            || checkName.equals(DDL_ATOMICITY_CHECK)) {
+          if (checkName.equals(DDL_ATOMICITY_CHECK) && !checkResult) {
+            ddlAtomicitySuccessfulCheckTimestamp.put(
+                u.getUniverseUUID(), report.getTimestampIso().toInstant());
+          }
           // Used FD count metric is always collected through health check as it's not
           // calculated properly from inside the collect_metrics service - it gets service limit
           // instead of user limit for file descriptors
@@ -344,11 +356,14 @@ public class HealthChecker {
       }
 
       healthScriptMetrics.addAll(
-          metrics.stream().map(Metric::getName).collect(Collectors.toList()));
+          metrics.stream()
+              .map(Metric::getName)
+              .filter(n -> !SKIP_CLEANUP_METRICS.contains(n))
+              .toList());
       metrics.addAll(
           platformMetrics.entrySet().stream()
               .map(e -> buildMetricTemplate(e.getKey(), u).setValue(e.getValue().doubleValue()))
-              .collect(Collectors.toList()));
+              .toList());
       // Clean all health check metrics for universe before saving current values
       // just in case list of nodes changed between runs.
       MetricFilter toClean =
@@ -526,7 +541,7 @@ public class HealthChecker {
     List<Pair<UUID, String>> universeNodeInfos =
         uploadedNodeInfo.keySet().stream()
             .filter(key -> key.getFirst().equals(universeUUID))
-            .collect(Collectors.toList());
+            .toList();
     universeNodeInfos.forEach(uploadedNodeInfo::remove);
   }
 
@@ -536,7 +551,7 @@ public class HealthChecker {
     List<Pair<UUID, String>> universeNodeInfos =
         uploadedNodeInfo.keySet().stream()
             .filter(key -> key.getFirst().equals(universeUUID))
-            .collect(Collectors.toList());
+            .toList();
     universeNodeInfos.forEach(uploadedNodeInfo::remove);
   }
 
@@ -568,6 +583,21 @@ public class HealthChecker {
 
     return executorFactory.createFixedExecutor(
         "Health-Check-Node-Pool", numParallelism, namedThreadFactory);
+  }
+
+  private static ExecutorService createConsistencyCheckExecutor(
+      PlatformExecutorFactory executorFactory, RuntimeConfGetter confGetter) {
+    int numParallelism =
+        confGetter.getGlobalConf(GlobalConfKeys.clusterConsistencyCheckParallelism);
+
+    // Initialize the health check thread pool.
+    ThreadFactory namedThreadFactory =
+        new ThreadFactoryBuilder()
+            .setNameFormat("Health-Check-Cluster-Consistency-Pool-%d")
+            .build();
+
+    return executorFactory.createFixedExecutor(
+        "Health-Check-Cluster-Consistency-Pool", numParallelism, namedThreadFactory);
   }
 
   public CompletableFuture<Void> runHealthCheck(
@@ -613,7 +643,7 @@ public class HealthChecker {
 
   private String getAlertDestinations(Universe u, Customer c) {
     List<String> destinations = emailHelper.getDestinations(c.getUuid());
-    if (destinations.size() == 0) {
+    if (destinations.isEmpty()) {
       return null;
     }
 
@@ -683,9 +713,7 @@ public class HealthChecker {
       }
       providerCode = provider.getCode();
       List<NodeDetails> activeNodes =
-          details.getNodesInCluster(cluster.uuid).stream()
-              .filter(NodeDetails::isActive)
-              .collect(Collectors.toList());
+          details.getNodesInCluster(cluster.uuid).stream().filter(NodeDetails::isActive).toList();
       for (NodeDetails nd : activeNodes) {
         if (nd.cloudInfo.private_ip == null) {
           log.warn(
@@ -697,9 +725,7 @@ public class HealthChecker {
         }
       }
       List<NodeDetails> sortedDetails =
-          activeNodes.stream()
-              .sorted(Comparator.comparing(NodeDetails::getNodeName))
-              .collect(Collectors.toList());
+          activeNodes.stream().sorted(Comparator.comparing(NodeDetails::getNodeName)).toList();
       Set<UUID> nodeUuids =
           sortedDetails.stream()
               .map(NodeDetails::getNodeUuid)
@@ -710,15 +736,19 @@ public class HealthChecker {
               .collect(Collectors.toMap(NodeInstance::getNodeUuid, Function.identity()));
       for (NodeDetails nodeDetails : sortedDetails) {
         NodeInstance nodeInstance = nodeInstanceMap.get(nodeDetails.getNodeUuid());
+        String nodeIdentifier = StringUtils.EMPTY;
+        if (nodeInstance != null && nodeInstance.getDetails().instanceName != null) {
+          nodeIdentifier = nodeInstance.getDetails().instanceName;
+        }
         NodeInfo nodeInfo =
             new NodeInfo()
                 .setNodeHost(nodeDetails.cloudInfo.private_ip)
                 .setNodeName(nodeDetails.nodeName)
                 .setNodeUuid(nodeDetails.nodeUuid)
-                .setNodeIdentifier(
-                    nodeInstance != null ? nodeInstance.getDetails().instanceName : "")
+                .setNodeIdentifier(nodeIdentifier)
                 .setYbSoftwareVersion(userIntent.ybSoftwareVersion)
                 .setEnableYSQL(userIntent.enableYSQL)
+                .setEnableConnectionPooling(userIntent.enableConnectionPooling)
                 .setEnableYCQL(userIntent.enableYCQL)
                 .setEnableYEDIS(userIntent.enableYEDIS)
                 .setEnableTls(userIntent.enableNodeToNodeEncrypt)
@@ -733,10 +763,16 @@ public class HealthChecker {
                 .setUniverseUuid(params.universe.getUniverseUUID())
                 .setNodeDetails(nodeDetails);
         if (nodeDetails.isMaster) {
-          nodeInfo.setMasterIndex(masterIndex++).setMasterHttpPort(nodeDetails.masterHttpPort);
+          nodeInfo
+              .setMasterIndex(masterIndex++)
+              .setMasterHttpPort(nodeDetails.masterHttpPort)
+              .setMasterRpcPort(nodeDetails.masterRpcPort);
         }
         if (nodeDetails.isTserver) {
-          nodeInfo.setTserverIndex(tserverIndex++).setTserverHttpPort(nodeDetails.tserverHttpPort);
+          nodeInfo
+              .setTserverIndex(tserverIndex++)
+              .setTserverHttpPort(nodeDetails.tserverHttpPort)
+              .setTserverRpcPort(nodeDetails.tserverRpcPort);
         }
         if (providerCode.equals(Common.CloudType.kubernetes.toString())) {
           nodeInfo.setK8s(true);
@@ -750,6 +786,9 @@ public class HealthChecker {
         if (nodeInfo.enableYSQL && nodeDetails.isYsqlServer) {
           nodeInfo.setYsqlPort(nodeDetails.ysqlServerRpcPort);
           nodeInfo.setYsqlServerHttpPort(nodeDetails.ysqlServerHttpPort);
+          if (nodeInfo.enableConnectionPooling) {
+            nodeInfo.setInternalYsqlPort(nodeDetails.internalYsqlServerRpcPort);
+          }
         }
         if (nodeInfo.enableYCQL && nodeDetails.isYqlServer) {
           nodeInfo.setYcqlPort(nodeDetails.yqlServerRpcPort);
@@ -757,9 +796,27 @@ public class HealthChecker {
         if (nodeInfo.enableYEDIS && nodeDetails.isRedisServer) {
           nodeInfo.setRedisPort(nodeDetails.redisServerRpcPort);
         }
-        if (!provider.getCode().equals(CloudType.onprem.toString())
-            && !provider.getCode().equals(CloudType.kubernetes.toString())) {
+
+        // Skip clock check for k8s.
+        if (!provider.getCode().equals(CloudType.kubernetes.toString())) {
           nodeInfo.setCheckClock(true);
+        }
+        // Clock drift config values. Clock drift health checks are only run for non-k8s universes
+        // and if they are enabled.
+        if (!provider.getCode().equals(CloudType.kubernetes.toString())
+            && confGetter.getConfForScope(params.universe, UniverseConfKeys.healthCheckTimeDrift)) {
+          nodeInfo.setCheckTimeDrift(true);
+          nodeInfo.setTimeDriftWrnThreshold(
+              confGetter.getConfForScope(
+                  params.universe, UniverseConfKeys.healthCheckTimeDriftWrnThreshold));
+          nodeInfo.setTimeDriftErrThreshold(
+              confGetter.getConfForScope(
+                  params.universe, UniverseConfKeys.healthCheckTimeDriftErrThreshold));
+          nodeInfo.setClockSyncServiceRequired(
+              confGetter.getConfForScope(
+                  params.universe, UniverseConfKeys.healthCheckClockSyncServiceRequired));
+        } else {
+          nodeInfo.setClockSyncServiceRequired(false);
         }
         if (params.universe.isYbcEnabled()) {
           nodeInfo
@@ -773,6 +830,7 @@ public class HealthChecker {
                           GFlagsUtil.getCustomTmpDirectory(nodeDetails, params.universe))
                       : nodeInfo.getYbHomeDir());
         }
+        nodeInfo.setOtelCollectorEnabled(params.universe.getUniverseDetails().otelCollectorEnabled);
         nodeMetadata.add(nodeInfo);
       }
     }
@@ -789,7 +847,8 @@ public class HealthChecker {
       return;
     }
 
-    List<NodeData> nodeReports = checkNodes(params.universe, nodeMetadata);
+    List<NodeData> nodeReports = checkNodes(params, nodeMetadata);
+    addUnexpectedServersChecks(nodeReports, nodeMetadata, params);
 
     Details fullReport =
         new Details()
@@ -819,9 +878,7 @@ public class HealthChecker {
         durationMs);
     if (healthCheckReport.getHasError()) {
       List<NodeData> failedChecks =
-          healthCheckReport.getData().stream()
-              .filter(NodeData::getHasError)
-              .collect(Collectors.toList());
+          healthCheckReport.getData().stream().filter(NodeData::getHasError).toList();
       log.warn(
           "Following checks failed for universe {}:\n{}",
           params.universe.getName(),
@@ -850,20 +907,152 @@ public class HealthChecker {
         buildMetricTemplate(PlatformMetrics.HEALTH_CHECK_STATUS, params.universe));
   }
 
-  private List<NodeData> checkNodes(Universe universe, List<NodeInfo> nodes) {
+  private void addUnexpectedServersChecks(
+      List<NodeData> nodeReports, List<NodeInfo> nodeMetadata, CheckSingleUniverseParams params) {
+    Set<String> checkedNodeIps =
+        nodeMetadata.stream().map(n -> n.nodeHost).collect(Collectors.toSet());
+    CheckClusterConsistency.CheckResult checkResult =
+        clusterConsistencyChecker.getUniverseCheckResult(params.universe.getUniverseUUID());
+    log.debug("Found check result: {}", checkResult);
+    if (checkResult != null) {
+      if (checkResult.getCheckTimestamp() + healthCheckIntervalMs() * 2
+          < System.currentTimeMillis()) {
+        log.error(
+            "Consistency check is too old ({}), ignoring",
+            new Date(checkResult.getCheckTimestamp()));
+        return;
+      }
+      for (String ip :
+          Sets.union(checkResult.getUnknownMasterIps(), checkResult.getUnknownTserverIps())) {
+        NodeDetails nodeDetails = params.universe.getNodeByAnyIP(ip);
+        if (nodeDetails != null && checkedNodeIps.contains(nodeDetails.cloudInfo.private_ip)) {
+          continue;
+        }
+        log.debug("Found ip with master/tserver running: {} node {}", ip, nodeDetails);
+        Optional<NodeInstance> nodeInstance = NodeInstance.maybeGet(nodeDetails.getNodeUuid());
+        NodeData nodeData =
+            new NodeData()
+                .setHasError(true)
+                .setHasWarning(false)
+                .setMetricsOnly(false)
+                .setMessage(UNEXPECTED_PROCESSES_CHECK)
+                .setNode(nodeDetails != null ? nodeDetails.cloudInfo.private_ip : ip);
+        if (nodeDetails != null) {
+          nodeData.setNodeName(nodeDetails.getNodeName());
+          List<NodeInstance> nodeInstances =
+              NodeInstance.listByUuids(Collections.singletonList(nodeDetails.azUuid));
+          if (nodeInstances.size() > 0) {
+            nodeData.setNodeIdentifier(nodeInstances.get(0).getDetails().instanceName);
+          } else {
+            nodeData.setNodeIdentifier(StringUtils.EMPTY);
+          }
+        } else {
+          nodeData.setNodeName(ip);
+        }
+        List<String> details = new ArrayList<>();
+        List<Details.Metric> metrics = new ArrayList<>();
+        if (checkResult.getUnknownTserverIps().contains(ip)) {
+          metrics.add(unexpectedProcessRunning(false, params.universe));
+          details.add("Tserver heartbeating to master");
+        }
+        if (checkResult.getUnknownMasterIps().contains(ip)) {
+          metrics.add(unexpectedProcessRunning(true, params.universe));
+          details.add("Master in raft group");
+        }
+        nodeData.setMetrics(metrics);
+        nodeData.setDetails(details);
+        nodeReports.add(nodeData);
+      }
+    }
+  }
+
+  private Details.Metric unexpectedProcessRunning(boolean master, Universe universe) {
+    String processName = master ? "Master" : "Tserver";
+    return new Details.Metric()
+        .setName(String.format("yb_node_unexpected_%s_running", processName.toLowerCase()))
+        .setHelp(String.format("%s is running on node (but should not)", processName))
+        .setValues(
+            Collections.singletonList(
+                new Details.MetricValue()
+                    .setValue(1d)
+                    .setLabels(
+                        Collections.singletonList(
+                            new Details.MetricLabel()
+                                .setName("universe_uuid")
+                                .setValue(universe.getUniverseUUID().toString())))));
+  }
+
+  private List<NodeData> checkNodes(CheckSingleUniverseParams params, List<NodeInfo> nodes) {
     // Check if it should log the output of the command.
+    Universe universe = params.universe;
     boolean shouldLogOutput =
         confGetter.getConfForScope(universe, UniverseConfKeys.healthLogOutput);
     int nodeCheckTimeoutSec =
         confGetter.getConfForScope(universe, UniverseConfKeys.nodeCheckTimeoutSec);
 
+    boolean ddlAtomicityCheckEnabled =
+        confGetter.getConfForScope(universe, UniverseConfKeys.ddlAtomicityCheckEnabled);
+    String nodeToRunDdlAtomicityCheck = null;
+    String masterLeaderUrl = null;
+
+    if (ddlAtomicityCheckEnabled) {
+      int ddlAtomicityIntervalSec =
+          confGetter.getConfForScope(universe, UniverseConfKeys.ddlAtomicityIntervalSec);
+
+      Instant lastDdlAtomicitySuccessfulCheckTimestamp =
+          ddlAtomicitySuccessfulCheckTimestamp.get(universe.getUniverseUUID());
+      String ybDbRelease =
+          universe.getUniverseDetails().getPrimaryCluster().userIntent.ybSoftwareVersion;
+      boolean ddlAtomicityCheckSupported =
+          CommonUtils.isReleaseBetween(DDL_ATOMICITY_CHECK_RELEASE, "2.19.0.0-b0", ybDbRelease)
+              || CommonUtils.isReleaseEqualOrAfter(
+                  DDL_ATOMICITY_CHECK_PREVIEW_RELEASE, ybDbRelease);
+      if (ddlAtomicityCheckSupported
+          && !params.onlyMetrics
+          && (lastDdlAtomicitySuccessfulCheckTimestamp == null
+              || lastDdlAtomicitySuccessfulCheckTimestamp
+                  .plus(ddlAtomicityIntervalSec, ChronoUnit.SECONDS)
+                  .isBefore(Instant.now()))) {
+        // We should schedule DDL atomicity check.
+        NodeDetails masterLeader = universe.getMasterLeaderNode();
+        if (masterLeader != null) {
+          NodeDetails nodeToRun = CommonUtils.getServerToRunYsqlQuery(universe);
+          boolean isK8s =
+              nodes.stream()
+                  .filter(ni -> ni.getNodeName().equals(masterLeader.getNodeName()))
+                  .map(NodeInfo::isK8s)
+                  .findFirst()
+                  .orElse(false);
+          // For now we don't enable HTTPS for K8S DB nodes.
+          // Fix that once we start doing that.
+          boolean httpsEnabledUI =
+              !isK8s
+                  && universe
+                      .getConfig()
+                      .getOrDefault(Universe.HTTPS_ENABLED_UI, "false")
+                      .equals("true");
+          masterLeaderUrl =
+              (httpsEnabledUI ? "https" : "http")
+                  + "://"
+                  + masterLeader.cloudInfo.private_ip
+                  + ":"
+                  + masterLeader.masterHttpPort;
+          nodeToRunDdlAtomicityCheck = nodeToRun.getNodeName();
+        }
+      }
+    }
     Map<String, CompletableFuture<Details>> nodeChecks = new HashMap<>();
     for (NodeInfo nodeInfo : nodes) {
+      NodeCheckContext context =
+          new NodeCheckContext().setLogOutput(shouldLogOutput).setTimeoutSec(nodeCheckTimeoutSec);
+      if (nodeInfo.getNodeName().equals(nodeToRunDdlAtomicityCheck)) {
+        context.setDdlAtomicityCheck(true);
+        context.setMasterLeaderUrl(masterLeaderUrl);
+      }
       nodeChecks.put(
           nodeInfo.getNodeName(),
           CompletableFuture.supplyAsync(
-              () -> checkNode(universe, nodeInfo, shouldLogOutput, nodeCheckTimeoutSec),
-              nodeExecutor));
+              () -> checkNode(universe, nodeInfo, context), nodeExecutor));
     }
 
     List<NodeData> result = new ArrayList<>();
@@ -913,14 +1102,14 @@ public class HealthChecker {
   }
 
   private Details checkNode(
-      Universe universe, NodeInfo nodeInfo, boolean logOutput, int timeoutSec) {
+      Universe universe, NodeInfo nodeInfo, NodeCheckContext nodeCheckContext) {
     Pair<UUID, String> nodeKey = new Pair<>(universe.getUniverseUUID(), nodeInfo.getNodeName());
     NodeInfo uploadedInfo = uploadedNodeInfo.get(nodeKey);
     ShellProcessContext context =
         ShellProcessContext.builder()
-            .logCmdOutput(logOutput)
+            .logCmdOutput(nodeCheckContext.isLogOutput())
             .traceLogging(true)
-            .timeoutSecs(timeoutSec)
+            .timeoutSecs(nodeCheckContext.getTimeoutSec())
             .build();
     if (uploadedInfo == null && !nodeInfo.isK8s()) {
       // Only upload it once for new node, as it only depends on yb home dir.
@@ -959,9 +1148,15 @@ public class HealthChecker {
     }
     uploadedNodeInfo.put(nodeKey, nodeInfo);
 
+    List<String> commandToRun = new ArrayList<>();
+    commandToRun.add(scriptPath);
+    if (nodeCheckContext.ddlAtomicityCheck) {
+      commandToRun.add("--ddl_atomicity_check=true");
+      commandToRun.add("--master_leader_url=" + nodeCheckContext.getMasterLeaderUrl());
+    }
     ShellResponse response =
         nodeUniverseManager
-            .runCommand(nodeInfo.getNodeDetails(), universe, scriptPath, context)
+            .runCommand(nodeInfo.getNodeDetails(), universe, commandToRun, context)
             .processErrors();
 
     return Json.fromJson(Json.parse(response.extractRunCommandOutput()), Details.class);
@@ -1020,8 +1215,7 @@ public class HealthChecker {
   private MetricFilter metricSourceKeysFilterWithHealthScriptMetrics(
       Customer customer, Universe universe, List<PlatformMetrics> metrics) {
     Set<String> allMetricNames = new HashSet<>(healthScriptMetrics);
-    allMetricNames.addAll(
-        metrics.stream().map(PlatformMetrics::getMetricName).collect(Collectors.toList()));
+    allMetricNames.addAll(metrics.stream().map(PlatformMetrics::getMetricName).toList());
     List<MetricSourceKey> metricSourceKeys =
         allMetricNames.stream()
             .map(
@@ -1031,7 +1225,7 @@ public class HealthChecker {
                         .name(metricName)
                         .sourceUuid(universe.getUniverseUUID())
                         .build())
-            .collect(Collectors.toList());
+            .toList();
     return MetricFilter.builder().sourceKeys(metricSourceKeys).build();
   }
 
@@ -1073,16 +1267,26 @@ public class HealthChecker {
     private boolean rootAndClientRootCASame = true;
     private String sslProtocol = "";
     private boolean enableYSQL = false;
+    private boolean enableConnectionPooling = false;
     private boolean enableYCQL = false;
     private boolean enableYSQLAuth = false;
     private int ysqlPort = 5433;
+    private int internalYsqlPort = 6433;
     private int ycqlPort = 9042;
     private boolean enableYEDIS = false;
     private int redisPort = 6379;
     private int masterHttpPort = 7000;
     private int tserverHttpPort = 9000;
+    private int masterRpcPort = 7100;
+    private int tserverRpcPort = 9100;
     private int ysqlServerHttpPort = 13000;
+
+    // Clock and drift check values will get overridden.
     private boolean checkClock = false;
+    private boolean checkTimeDrift = true;
+    private int timeDriftWrnThreshold = 200;
+    private int timeDriftErrThreshold = 400;
+
     private Long nodeStartTime = null;
     private boolean testReadWrite = true;
     private boolean testYsqlshConnectivity = true;
@@ -1090,14 +1294,23 @@ public class HealthChecker {
     private boolean enableYbc = false;
     private int ybcPort = 18018;
     private UUID universeUuid;
+    private boolean otelCollectorEnabled;
+    private boolean clockSyncServiceRequired = true;
     @JsonIgnore @EqualsAndHashCode.Exclude private NodeDetails nodeDetails;
+  }
+
+  @Data
+  @Accessors(chain = true)
+  private static class NodeCheckContext {
+    private boolean logOutput;
+    private int timeoutSec;
+    private boolean ddlAtomicityCheck;
+    private String masterLeaderUrl;
   }
 
   private Details removeMetricOnlyChecks(Details details) {
     List<NodeData> nodeReports =
-        details.getData().stream()
-            .filter(data -> !data.getMetricsOnly())
-            .collect(Collectors.toList());
+        details.getData().stream().filter(data -> !data.getMetricsOnly()).toList();
     return new Details()
         .setTimestampIso(details.getTimestampIso())
         .setYbVersion(details.getYbVersion())
